# Umbra

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/: FUNDING.yml
.github/workflows/: cmake-multi-platform-vcpkg-integration.yml
cli/: CMakeLists.txt
cli/src/: entry.cpp
engine/: CMakeLists.txt
engine/include/Umbra/: boot.hpp  builtins.hpp  config.hpp  engine_state.hpp  fs-vfs.hpp  pak-vfs.hpp  pak.hpp  services.hpp  types.hpp  umbra.hpp  umbra_exception.hpp  vfs.hpp
engine/include/Umbra/mounts/: fs_mount.hpp
engine/include/Umbra/services/: renderer.hpp  virtual_file_system.hpp
engine/include/Umbra/types/: dynamic_array.hpp  singly_linked_list.hpp  static_array.hpp  vector2.hpp  vector3.hpp
engine/include/Umbra/types/data/: file.hpp  vector3.hpp
engine/include/Umbra/types/ordered/: singly_linked_list.hpp  static_array.hpp
engine/src/: umbra.cpp
engine/src/boot/: boot.cpp
engine/src/config/: config.cpp
engine/src/pak/: pak_reader.cpp  pak_writer.cpp
engine/src/vfs/: fs-vfs.cpp  pak-vfs.cpp  vfs.cpp
engine/src/vfs/mount/: fs_mount.cpp  pak_mount.cpp
engine/templates/: magics.t.hpp
game/: .luarc.json  umbra.toml
game/source/: entry.lua
luadefs/: dynamic_array.d.lua  file.d.lua  globals.d.lua  singly_linked_list.d.lua  vector2.d.lua  vector3.d.lua
luadefs/services/: renderer.d.lua
luadefs/types/containers/: singly_linked_list.d.lua  static_array.d.lua
luadefs/types/data/: vector3.d.lua
runner/: CMakeLists.txt
runner/src/: entry.cpp
